added some style to chat window

--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -26,7 +26,7 @@ else
 </SCRIPT>
 </head>
 
-<body>
+<body bgcolor="#F8EEB1">
 <h1 id="header">calchat |</h1>
 <div id="fb-root"></div>
 <script>
@@ -65,7 +65,7 @@ else
   <a href="#" class="change">room 3</a>
 </div>
 <br>
-<div id="messages"><br>You're in room 1</div>
+<div id="messages" style="width:600px; height:400px; overflow:auto"><br>You're in room 1</div>
 <input type="text" id="text-input" onKeyPress="return submitenter(this, event)">
 <input type="button" value="Send" id="send-button">
 <script>
