more style changes

--- a/multiroomchat.html
+++ b/multiroomchat.html
@@ -65,7 +65,8 @@ else
   <a href="#" class="change">room 3</a>
 </div>
 <br>
-<div id="messages" style="width:600px; height:400px; overflow:auto"><br>You're in room 1</div>
+<div id="messages" style=" background:#ffffff; width:600px; height:400px; overflow:auto"><br>You're in room 1</div>
+<br>
 <input type="text" id="text-input" onKeyPress="return submitenter(this, event)">
 <input type="button" value="Send" id="send-button">
 <script>
