hiding logout by default

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<div id="user-friends"></div>
 		-->
 
-		<div id="logout">
+		<div id="logout" style="display: hidden">
 			<p><button class="btn-danger" onClick="FB.logout();">Logout</button></p>
 		</div>
 		
